--- a/styles.css
+++ b/styles.css
@@ -9,19 +9,18 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: repeat(16, 0fr);
-    grid-template-rows: repeat(16,0fr);
     border: 1px solid black;
     background-color: whitesmoke;
-    
-    
+    grid-template-columns: repeat(16, minmax(0, 1fr));
+    grid-template-rows: repeat(16, minmax(0, 1fr));;
+    width: 700px;
+    height: 700px;
 }
 
 .grid-cell {
-    width: 20px;
-    height: 20px;
+    width: 1fr;
+    height: 1fr;   
     border: 1px solid brown;
-    
 }
 
 .grid-cell:hover {
